--- a/assets/scss/HeaderStyles/_Header_styles.scss
+++ b/assets/scss/HeaderStyles/_Header_styles.scss
@@ -1,10 +1,11 @@
 header{
-    position: relative;
     .desktop-banner-container{
+        background-color: white;
         padding: calc(8rem/var(--base)) calc(120rem/var(--base));
         display: flex;
         align-items: center;
         justify-content: space-between;
+        
         a{
             text-decoration: none;
         }
@@ -41,6 +42,7 @@ header{
 
     .mobile-banner-container{
         display: none;
+        background-color: white;
     }
 
 
